--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.1.0",
+    "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "uid2": "^1.0.0"
   }
 }
